change ui, implement scroll function, fix spacing

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
 body {
-  background-color: #141414;
+  background-color: #282828;
   color: #ffffff;
   overflow-x: hidden;
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
 .head {
@@ -15,30 +17,40 @@ body {
   top: 0;
   width: 100%;
   z-index: 100;
-  border: 1px solid blue;
+  transition: top 0.3s;
+}
+
+.heading {
+  text-align: center;
 }
 
 input {
   margin-left: 21px;
   background-color: #d9d9d9;
   font-weight: 700;
-  padding: 7px;
-  font-size: 12px;
-  height: 14px;
+  padding: 7px 7px 7px 14px;
+  font-size: 18px;
+  height: 24px;
   border: none;
   border-radius: 7px;
 }
 
 .back-off {
   margin-top: 100px;
-  margin-left: 21px;
 }
 
 .image-container {
   position: relative;
-  transition: transform 0.2s;
-  margin-top: 2rem;
-  margin-bottom: 2rem;
+  transition: all 0.2s ease-in-out;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  background: rgba(59, 59, 59, 0.5);
+  border-radius: 0px 0px 10px 10px;
+}
+
+.image-container img {
+  border-radius: 10px 10px 0px 0px;
 }
 
 @media (max-width: 768px) {
@@ -51,10 +63,19 @@ input {
   }
 }
 
+.no-flickr {
+  -webkit-transform: translateZ(0);
+  -moz-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  -o-transform: translateZ(0);
+  transform: translateZ(0);
+}
+
 .image-container:hover {
   cursor: pointer;
   transform: scale(1.1);
-  z-index: 10000;
+  margin-left: 1rem;
+  margin-right: 1rem;
 }
 
 .image-container:hover .overlay {
@@ -71,11 +92,12 @@ input {
   width: 100%;
   transition: 0.5s ease-in;
   opacity: 0;
-  bottom: 0;
+  top: 0;
   left: 0;
-  font-size: 20px;
-  padding: 20px 0;
+  font-size: 14px;
+  padding: 10px 0;
   text-align: center;
+  border-radius: 10px 10px 0px 0px;
 }
 
 .overlay:hover {
@@ -83,29 +105,105 @@ input {
 }
 
 .box {
-  border: 1px solid red;
+  border-radius: 7px;
   display: flex;
   justify-content: center;
-  gap: 28px;
+  gap: 21px;
   flex-wrap: wrap;
   margin-top: 14px;
 }
 
+.box img,
+.box div {
+  max-width: 110px;
+}
+
+@media (min-width: 768px) {
+  .box img,
+  .box div {
+    max-width: 190px;
+  }
+}
+
 .smaller-box {
-  border: 1px solid green;
+  margin-top: 200px;
+}
+@media (min-width: 768px) {
+  .clear-top {
+    margin-top: 100px;
+  }
 }
 
 .movie-year {
   position: absolute;
   top: -15px;
   right: 40%;
-  background-color: yellow;
-  border-radius: 50%;
-  color: red;
-  height: 60px;
-  width: 60px;
+  background-color: #ffd700;
+
+  color: #be0000;
+  padding: 7px;
   text-align: center;
   font-weight: 700;
-  z-index: 1000000;
+  z-index: 2;
   transition: 0.2s ease-in-out;
+}
+
+.inside {
+  margin: 0;
+}
+
+@media (min-width: 768px) {
+  .inside {
+    margin: 8px 0 0 0;
+  }
+  .movie-year {
+    border-radius: 50%;
+    height: 40px;
+    width: 40px;
+  }
+}
+
+.fav-box {
+  padding: 10px;
+}
+
+.fav-box div,
+.fav-box img {
+  max-width: 90px;
+}
+
+.fav-box .movie-year {
+  display: none;
+}
+
+@media (min-width: 768px) {
+  .fav-box {
+    margin-bottom: 1rem;
+  }
+  .fav-box .image-container {
+    margin: 0.5rem 0;
+  }
+
+  .fav-box div,
+  .fav-box img {
+    max-width: 170px;
+  }
+}
+
+.fav-box .overlay {
+  font-size: 12px;
+  padding: 10px 0;
+}
+
+.title,
+.title-year {
+  margin: 3px 14px;
+  font-size: 12px;
+}
+
+@media (min-width: 768px) {
+  .title,
+  .title-year {
+    font-size: 16px;
+  }
 }
